--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+dj-database-url==0.5.0
 Django==2.2.5
 django-cors-headers==3.2.0
+django-extensions==2.2.5
 djangorestframework==3.10.3
+gunicorn==20.0.0
+psycopg2==2.8.4
 pytz==2019.2
+six==1.13.0
 sqlparse==0.3.0
+whitenoise==4.1.4
