--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 Brotli==1.0.7
+certifi==2019.11.28
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2.5
 django-cors-headers==3.2.0
 django-extensions==2.2.5
+django-storages==1.8
 djangorestframework==3.10.3
+dropbox==9.4.0
 gunicorn==20.0.0
+idna==2.8
 psycopg2==2.8.4
 pytz==2019.2
+requests==2.22.0
 six==1.13.0
 sqlparse==0.3.0
+urllib3==1.25.7
 whitenoise==4.1.4
