--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework==3.10.3
 dnspython==1.16.0
 dropbox==9.4.0
 eventlet==0.25.1
+fernet==1.0.1
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==20.0.0
@@ -23,6 +24,7 @@ kombu==4.6.7
 monotonic==1.5
 more-itertools==8.0.2
 psycopg2==2.8.4
+pyaes==1.6.1
 pycparser==2.19
 pytz==2019.2
 redis==3.3.11
